fixing the letter spacing in the header

--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -46,7 +46,7 @@ body{
         text-decoration: none;
         color: rgb(39, 35, 35);
         font-size: 14px;
-        letter-spacing: -0.2px;
+        letter-spacing: -1px;
         font-weight: 600;
 
     }
